<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        android:gravity="center"
        android:padding="16dp">


        <ImageView
            android:id="@+id/logo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo1"
            android:layout_centerHorizontal="true"
            android:text="@string/madhya_pradesh_police"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/t"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text= "@string/check_grievance_status"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/ETapplicationid"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/t1"
            android:layout_centerHorizontal="true"
            android:background="@drawable/roundtext"
            android:hint="@string/application_id"
            android:inputType="text"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="24dp"/>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ETapplicationKey"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:background="@drawable/roundbutton"
            android:elevation="20dp"
            android:onClick="onLogin"
            android:padding="12dp"
            android:text="@string/show_status"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ETapplicationKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:inputType="textPassword"
            android:padding="10dp"
            android:layout_below="@+id/ETapplicationid"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:background="@drawable/roundtext"
            android:hint="@string/application_key"/>


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>