<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUs">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/wc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4f5a67"
            android:elevation="10dp"
            android:paddingStart="16dp"
            android:text="@string/about_us"
            android:textColor="#f2fde4"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/wc"
            android:padding="8dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">


                <LinearLayout
                    android:id="@+id/about"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/madhya_pradesh_police_jansunwai_app_to_check_status_of_lodged_complaints_by_citizens"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="italic"
                        tools:targetApi="o" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:text="@string/developed_by"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tanishq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/about"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/gradient"
                    android:onClick="tanishqLink"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/tanishq1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/tanishq_shastri"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/linkedin" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/https_www_linkedin_com_in_tanishqshastri"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="italic" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/chayan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tanishq"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/gradient"
                    android:onClick="chayanLink"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:src="@drawable/chayan1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/chayan_bansal"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/linkedin" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/https_www_linkedin_com_in_chayan_bansal"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="italic" />

                </LinearLayout>

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>