<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".helpline">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        android:gravity="center">

        <TextView
            android:id="@+id/wc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4f5a67"
            android:elevation="10dp"
            android:paddingStart="16dp"
            android:text="@string/other_police_helplines"
            android:textColor="#f2fde4"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/wc"
    >

        <LinearLayout
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:orientation="vertical"
            >

            <LinearLayout
                android:id="@+id/citizenportal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:background="@drawable/roundcitizenportal"
                android:elevation="10dp"
                android:orientation="vertical"
                android:onClick="opencitizenportal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/mppolicelogo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mp_police_citizen_portal"
                    android:textAlignment="center"
                    android:textColor="#3c3c3c"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/womanhelpline"
                android:onClick="openwoman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/roundwoman"
                android:elevation="10dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/woman" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/woman_helplines"
                    android:textAlignment="center"
                    android:textColor="#3c3c3c"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cmhelpline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/roundcmhelpline"
                android:elevation="10dp"
                android:onClick="opencm"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/cmhelpline" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cm_helpline"
                    android:textAlignment="center"
                    android:textColor="#3c3c3c"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/citizencop"
                android:onClick="opencitizencop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/roundcitizencop"
                android:elevation="10dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/citizencop"
                     />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/citizen_cop"
                    android:textAlignment="center"
                    android:textColor="#3c3c3c"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />
            </LinearLayout>


        </LinearLayout>

</ScrollView>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>